# ChangeLog for net-firewall/shorewall-shell
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.31 2009/10/09 12:04:25 pva Exp $

*shorewall-shell-4.2.11 (09 Oct 2009)

  09 Oct 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.11.ebuild:
  Version bump, bug #281617, thank Vieri for this work.

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Stable for HPPA (bug #256064).

*shorewall-shell-4.2.9 (24 May 2009)

  24 May 2009; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.2.4.ebuild,
  -shorewall-shell-4.2.6.ebuild, -shorewall-shell-4.2.7.ebuild,
  +shorewall-shell-4.2.9.ebuild:
  Version bump, remove old, thank Vieri for maintaining this package (bug
  269929 and bug 270193).

*shorewall-shell-4.2.8 (15 May 2009)

  15 May 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.8.ebuild:
  Version bump, bug #269578, thank Vieri for maintaining this package.

*shorewall-shell-4.2.7 (03 Apr 2009)

  03 Apr 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.7.ebuild:
  Version bump, bug #264270, thank Vieri for maintaining this package.

  20 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc for bug 256064

  15 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc64 for bug 256064

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  amd64/x86 stable, bug #256064

  28 Feb 2009; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.12.ebuild,
  -shorewall-shell-4.0.13.ebuild, -shorewall-shell-4.0.13.1.ebuild,
  -shorewall-shell-4.0.14.1.ebuild, shorewall-shell-4.0.15.ebuild,
  -shorewall-shell-4.2.0.ebuild, -shorewall-shell-4.2.1.ebuild:
  Removed old, bug #256064. Fixed RDEPEND repoman warning.

*shorewall-shell-4.2.6 (22 Feb 2009)
