@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/shorewall-shell
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.31 2009/10/09 12:04:25 pva Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.32 2010/03/16 14:25:28 chainsaw Exp $
+
+  16 Mar 2010; <chainsaw@gentoo.org> metadata.xml:
+  Taking over maintainership from Vieri who is stepping down due to time
+  constraints.
 
 *shorewall-shell-4.2.11 (09 Oct 2009)
 
